# RMiT-Rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
assets/linkedin/: README.md  manim.cfg  manim_rag_visual.py
data/eval/: answer_smoke.jsonl  retrieval_smoke.jsonl
docs/: architecture.md  operations.md  source_documents.md
src/bnm_compliance_assistant/: __init__.py
src/bnm_compliance_assistant/answering/: __init__.py  answer.py  evaluate_answers.py
src/bnm_compliance_assistant/api/: main.py
src/bnm_compliance_assistant/api/static/: app.js  index.html  styles.css
src/bnm_compliance_assistant/config/: settings.py
src/bnm_compliance_assistant/ingestion/: chunk_pages.py  extract_outlines.py  extract_pages.py  inspect_chunks.py
src/bnm_compliance_assistant/retrieval/: bm25.py  embeddings.py  evaluate_bm25.py  evaluate_hybrid.py  evaluate_qdrant.py  evaluate_rerank.py  hybrid.py  index_qdrant.py  qdrant_search.py  rerank.py
tests/: test_answer_api.py  test_answering.py  test_bm25.py  test_chunk_pages.py  test_embeddings.py  test_evaluate_answers.py  test_evaluate_bm25.py  test_extract_outlines.py  test_health.py  test_hybrid.py  test_index_qdrant.py  test_qdrant_search.py  test_rerank.py
